[metadata]
name = ancient-debris
version = 0.0.1
author = Nether-Power
author_email = np@plaris-mc.tech
description = A KOOK Bot develop with khl.py
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Nether-Power/Ancient-Debris
project_urls =
    Bug Tracker = https://github.com/Nether-Power/Ancient-Debris/issues
    Tutorial = https://github.com/Nether-Power/Ancient-Debris/tree/main/docs
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    = .
python_requires = >=3.6
install_requires =
    khl.py

[options.packages.find]
where = .